# EDII-Hash-ArvoreB-Steam-Dataset

./: .gitignore  CMakeLists.txt  README.md
src/: config.h  main.cpp
src/ArvoreB/: arvoreB.cpp  arvoreB.h  noB.cpp  noB.h
src/Hash/: hash.cpp  hash.h  hash_entry.h  linked_list.h  player.h
src/HashGenerico/: criaHashPlayers.cpp  hash.h  hash_entry.h  hash_generico.h  hash_players.cpp  hash_players.h  linked_list.h
src/LeitorDePlanilha/: leitorDePlanilha.cpp  leitorDePlanilha.h
src/Menu/: menu.cpp  menu.h
src/Objects/: Conquista.cpp  Conquista.h  Jogo.cpp  Jogo.h  Player.cpp  Player.h
src/Objetos/: Conquista.cpp  Conquista.h  Jogo.cpp  Jogo.h  Player.cpp  Player.h
src/Utils/: utils.h
src/tests/: test_hash.cpp
